src/objects/BT_CO_DIR_ImportSingpostDatabase__c.object
<CustomObject>
    <fields>
        <fullName>AddressType__c</fullName>
        <label>AddressType</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Job_Id__c</fullName>
        <label>Batch_Job_Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Batch_Run_Date__c</fullName>
        <label>Batch Run Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>BuildingKey__c</fullName>
        <label>BuildingKey</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NumberOfUnits__c</fullName>
        <label>NumberOfUnits</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ServiceNumber__c</fullName>
        <label>ServiceNumber</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SingpostKey__c</fullName>
        <externalId>true</externalId>
        <label>SingpostKey</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StreetKey__c</fullName>
        <label>StreetKey</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Validation_Details__c</fullName>
        <label>Validation Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Validation_Status__c</fullName>
        <label>Validation Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WalkupIndicator__c</fullName>
        <label>WalkupIndicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buildingCode__c</fullName>
        <label>buildingCode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buildingDescription__c</fullName>
        <label>buildingDescription</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buildingName__c</fullName>
        <label>buildingName</label>
        <length>45</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>buildingNo__c</fullName>
        <label>buildingNo</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>floor__c</fullName>
        <label>floor</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>postalCodeImageBase64__c</fullName>
        <label>postalCodeImageBase64</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>postalCode__c</fullName>
        <label>postalCode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>streetName__c</fullName>
        <label>streetName</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>unit__c</fullName>
        <label>unit</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>BT_CO_DIR_ImportSingpostDatabase</label>
    <nameField>
        <label>BT_CO_DIR_ImportSingpostDatabase</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BT_CO_DIR_ImportSingpostDatabase</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>